docs(4-Java): 完成 57 个文件六维评审 + Team C 拓扑合并
Team A 重写：57 个文件增强数学模型、数据流图、机制解释
Team B 六维评审：52 个 PASS + 5 个 AUTO-PASS（软性熔断）
  - AUTO-PASS: 03-JPA与Hibernate, 06-Docker与K8s, 09-SpringSecurity,
    建造者模式, 装饰器模式（连续 3 次 SPECIAL-REVISE）
Team C 拓扑合并：5 个子目录新增 README.md，路由 100% 连通
无真正硬性熔断触发（无 fuse-report.md 更新）

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>